--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -344,6 +344,18 @@
       <type>jar</type>      
       <classifier>jdk6</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.forgerock.opendj</groupId>
+      <artifactId>opendj-server</artifactId>
+      <version>2.4.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sleepycat</groupId>
+      <artifactId>je</artifactId>
+      <version>4.1.7</version>
+      <scope>test</scope>
+    </dependency>    
   </dependencies>
 
   <build>
@@ -361,6 +373,7 @@
           <exclude>**/*.tar.gz</exclude>
           <exclude>**/*.tar.bz2</exclude>
           <exclude>**/*.sql</exclude>
+          <exclude>opendj/**</exclude>
         </excludes>
       </testResource>
       <testResource>
@@ -376,6 +389,7 @@
           <include>**/*.tar.gz</include>
           <include>**/*.tar.bz2</include>
           <include>**/*.sql</include>
+          <include>opendj/**</include>
         </includes>
       </testResource>
     </testResources>
@@ -409,4 +423,7 @@
       </plugin>
     </plugins>
   </build>
+  <properties>
+    <apacheds.version>1.5.7</apacheds.version>
+  </properties>
 </project>
