Feature #3110 : adding the delayed notifications sending by a scheduled job

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-#Multi channel notification (value true/false)
+# Multi channel notification (value true/false)
 multiChannelNotification = false
 
 # Les canaux de communication \u00e0 activer par d\u00e9faut. Si plusieurs canaux sont r\u00e9f\u00e9renc\u00e9s ici,
@@ -51,3 +51,8 @@ notif.receiver.displayUser.threshold = 20
 # - "W", weekly : hebdomadaire
 # - "M", monthly : mensuelle
 DEFAULT_DELAYED_NOTIFICATION_FREQUENCY = N
+
+# Par défaut, le batch d'envoi des notifications avec fréquence de réception est lancé tous les jours à 00h30.
+# La syntaxe est celle de CRON sous unix.
+# Aucune valeur renseignée désactive le batch.
+cronDelayedNotificationSending = 30 0 * * *
