--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -51,3 +51,8 @@ notif.receiver.displayUser.threshold = 20
 # - "W", weekly : hebdomadaire
 # - "M", monthly : mensuelle
 DEFAULT_DELAYED_NOTIFICATION_FREQUENCY =    N             
+
+# Par défaut, le batch d'envoi des notifications avec fréquence de réception est lancé tous les jours à 00h30.
+# La syntaxe est celle de CRON sous unix.
+# Aucune valeur renseignée désactive le batch.
+cronDelayedNotificationSending = 10 * * * *
