--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -151,6 +151,11 @@
       <artifactId>commons-dbcp</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.forgerock.opendj</groupId>
+      <artifactId>opendj-server</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
