--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -50,7 +50,20 @@ notif.receiver.displayUser.threshold = 20
 # - "D", daily : quotidienne
 # - "W", weekly : hebdomadaire
 # - "M", monthly : mensuelle
+# N par défaut, si la valeur n'est pas renseignée.
 DEFAULT_DELAYED_NOTIFICATION_FREQUENCY =    N             
+
+# Liste des fréquences proposées séparées par des virgules.
+# Les valeurs possibles sont les suivantes :
+# - "" : (vide) l'utilisateur n'a pas le choix, la fréquence est celle par définie défaut (cf. DEFAULT_DELAYED_NOTIFICATION_FREQUENCY)
+# - * : toutes les fréquences sont proposées
+# - N : cf. DEFAULT_DELAYED_NOTIFICATION_FREQUENCY
+# - D : cf. DEFAULT_DELAYED_NOTIFICATION_FREQUENCY
+# - W : cf. DEFAULT_DELAYED_NOTIFICATION_FREQUENCY
+# - M : cf. DEFAULT_DELAYED_NOTIFICATION_FREQUENCY
+# Dans tous les cas, la valeur de DEFAULT_DELAYED_NOTIFICATION_FREQUENCY est proposée, il n'est donc pas nécessaire de l'indiquer dans cette liste.
+# Toutes les valeurs incorrectes sont ignorées.
+DELAYED_NOTIFICATION_FREQUENCY_CHOICE_LIST = *
 
 # Par défaut, le batch d'envoi des notifications avec fréquence de réception est lancé tous les jours à 00h30.
 # La syntaxe est celle de CRON sous unix.
