Feature #3110 : adding english StringTemplates

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
@@ -64,9 +64,9 @@ frequencyDAILY=quotidienne
 frequencyWEEKLY=hebdomadaire
 frequencyMONTHLY=mensuelle
 
-delayDAILY=un jour
-delayWEEKLY=une semaine
-delayMONTHLY=un mois
+delayDAILY=demain
+delayWEEKLY=la semaine prochaine
+delayMONTHLY=le mois prochain
 
 resourceActionCREATE=cr\u00e9\u00e9e
 resourceActionUPDATE=modifi\u00e9e
