Fixing bug #569, bug #2508, bug #3120 Adding support of SnowballFilter to WAAnalyzer.java Now, terms are stemmed. Only lemmas are indexed. This allows to ignore singular/plural, male/female and conjugated forms

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -234,10 +234,10 @@
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-spellchecker</artifactId>
     </dependency>
-    <!--<dependency>
+    <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-snowball</artifactId>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>org.jdom</groupId>
       <artifactId>jdom</artifactId>
