--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
@@ -75,3 +75,12 @@ enableDymIndexing = true
 
 # server name to identify origin of indexed documents
 server.name = Silverpeas
+
+analyzer.language.default = fr
+
+snowball.stemmer.fr = French
+snowball.stemmer.de = German
+snowball.stemmer.en = English
+snowball.stemmer.es = Spanish
+snowball.stemmer.it = Italian
+snowball.stemmer.pt = Portuguese
