Bug #3323. Now, all use of JMS other than the Notification API is done through the HornetQ JCA that manages for J2EE/JEE applications the life-cycle of both connections and sessions. The JMS implementation of the Notification API accesses directly the JMS as it manages itself the life-cycle of both connections and sessions.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
@@ -137,8 +137,16 @@ JMS_HEADER_CHANNEL = CHANNEL
 SILVERSTATISTICS_JMS_QUEUE = java:/queue/statisticsQueue
 JMS_QUEUE = java:/queue/notificationsQueue
 
-SILVERSTATISTICS_JMS_FACTORY = java:/XAConnectionFactory
-JMS_FACTORY = java:/XAConnectionFactory
+# For better performance, the message consumers (MDB) and senders access the JMS through the HornetQ
+# JCA that manages the life-cycle of the connections and of the sessions. When using the JCA, as
+# expected by the JEE specifications, some JMS features aren't available like, for example, durable
+# subscribers.
+SILVERSTATISTICS_JMS_FACTORY = java:/JmsXA
+JMS_FACTORY = java:/JmsXA
+
+# The JMS implementation of the Notification API manages itself the life-cycle of the connections
+# and of the sessions. So it requires the connection factory to access directly the JMS.
+NOTIF_API_JMS = java:/XAConnectionFactory
 
 #
 # exemple pour une config jboss
