--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -151,6 +151,18 @@
       <artifactId>commons-dbcp</artifactId>
       <scope>compile</scope>
     </dependency>
+     <dependency>
+      <groupId>javax.jcr</groupId>
+      <artifactId>jcr</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
