--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <connection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</connection>
     <developerConnection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</developerConnection>
     <url>http://github.com/Silverpeas/Silverpeas-Core</url>
+    <tag>core-5.9.1</tag>
   </scm>
 
   <repositories>
@@ -78,7 +79,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.9.1-SNAPSHOT</version>
+  <version>5.9.1</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
