Fixing bug #3247 by fixing implementation of method getTRUEChildGroupsEntry and corresponding tests

--- a/lib-core/src/test/resources/com/stratelia/silverpeas/domains/domainLDAP.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/domains/domainLDAP.properties
@@ -29,6 +29,7 @@ database.LDAPAccessPasswd=password
 database.LDAPUserBaseDN=dc=silverpeas,dc=org
 database.LDAPSearchRecurs=true
 database.LDAPOpAttributesUsed=true
+database.SortControlSupported=false
 
 users.ClassName=person
 users.IdField=uid
