Feature #3111. Integrate the change in the work of Aurore. Improve the placement of the userzoom tooltip. Fix some misbehaviour with IE7.

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -101,3 +101,4 @@ myProfile.status.timeout = Votre session a expir\u00e9. Votre statut n'a pas pu 
 tchat=Discuter
 connected=connect\u00e9
 notConnected=non connect\u00e9
+ToContact=Contacter
