--- a/lib-core/src/test/resources/com/stratelia/webactiv/general.properties
+++ b/lib-core/src/test/resources/com/stratelia/webactiv/general.properties
@@ -23,18 +23,18 @@
 #
 ApplicationURL=/silverpeas/
 
-#Nom du workspace (configur\u00E9 dans repository.xml)
+#Nom du workspace (configur\u00e9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
 
 # working directory for components (created with the instanciators)
-uploadsPath=${project.build.directory}/temp/uploads
+uploadsPath=${basedir}/target/temp/uploads
 # working directory for the search engine
-uploadsIndexPath=${project.build.directory}/temp/index
+uploadsIndexPath=${basedir}/target/temp/index
 removeLocksOnInit=yes
 # working directory for temporaries files
-tempPath=${project.build.directory}/temp/temp
+tempPath=${basedir}/target/temp/temp
 
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 accessForbidden = /admin/jsp/accessForbidden.jsp
@@ -48,7 +48,7 @@ smallLogo=/admin/jsp/icons/logo_silverpeas.gif
 smallLogoSilverBlue=icons/DomainbarSilverblue/logo.gif
 
 # advanced search with PDC
-# doit \u00EAtre \u00E0 true ou false
+# doit \u00eatre \u00e0 true ou false
 advancedSearchWithPDC = true
 
 # Domain visibility parameter
