--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -332,7 +332,7 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
-      <!--<classifier>silverpeas</classifier>-->
+      <classifier>silverpeas</classifier>
     </dependency>
     <dependency>
       <groupId>com.drewnoakes</groupId>
