--- a/web-core/src/test/resources/com/silverpeas/attachment/Configuration.properties
+++ b/web-core/src/test/resources/com/silverpeas/attachment/Configuration.properties
@@ -29,3 +29,6 @@ jdbc.driver=${jdbc_driver}
 jdbc.url=${jdbc_url}
 jdbc.username=${jdbc_login}
 jdbc.password=${jdbc_password}
+
+basedir=${basedir}
+project.basedir=${basedir}
