--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -331,3 +331,4 @@ GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
 GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
 GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
 GML.Today=Aujourd'hui
+GML.Tomorrow=Demain
