--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -219,6 +219,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-multipart</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
       <scope>provided</scope>
@@ -269,7 +274,7 @@
 
   <build>
     <testResources>      
-       <testResource>
+      <testResource>
         <directory>${basedir}/src/test/resources/</directory>
         <filtering>false</filtering>
         <includes>
@@ -286,7 +291,7 @@
       <testResource>
         <directory>${basedir}/src/test/resources</directory>
         <filtering>true</filtering>
-         <includes>
+        <includes>
           <include>**/*.properties</include>
           <include>**/*.xml</include>
           <include>**/*.txt</include>
@@ -300,7 +305,7 @@
     <filters>
       <filter>src/test/filters/filters.properties</filter>
     </filters>
-<!--    <plugins>
+    <!--    <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>aspectj-maven-plugin</artifactId>
