Feature #1836 : adding warnings on sensible application parameters

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -83,10 +83,10 @@ JSPP.creationInstance = Ajout d'un service
 JSPP.roleDescription = Description du r\u00f4le
 
 # erreurs
-MustContainsText = doit \u00eatre renseign\u00e9 
-ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas exc\u00e9der 
-NbMaxTextArea = 2000 
+MustContainsText = doit \u00eatre renseign\u00e9
+ThisFormContains = Attention, ce formulaire contient
+ContainsTooLargeText = ne doit pas exc\u00e9der
+NbMaxTextArea = 2000
 Characters = caract\u00e8res
 JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http://
 
@@ -120,7 +120,7 @@ JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
 # Copy/Cut/Paste component
-JSPP.CopyOf = Copy of 
+JSPP.CopyOf = Copy of
 
 # Deplacement de composant
 JSPP.SpaceIn = D\u00e9placement dans l'espace
@@ -153,3 +153,7 @@ JSPP.BinDeleteConfirmSelected = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00
 JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas pr\u00e9ciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
 JSPP.spaceRecover = Recouvrer les droits
 JSPP.applications.add = Ajouter cette application
+
+Warning.dialog.confirmation.message.end = Confirmez-vous ?
+Warning.hiddenComponent = Attention, en cochant cette case, vous indiquez que l'application n'est pas visible dans les menus.
+Warning.publicComponent = Attention, en cochant cette case, vous indiquez que l'application est accessible \u00e0 tous les utilisateurs.
