closing feature #1037 now it is possible to move a space and its content (cut operation) same behavior have been implemented for components

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -44,12 +44,11 @@ JSPP.UPSpaceTemplateProfile = S\u00e9lectionner les groupes/utilisateurs \u00e0 
 
 JSPP.welcome =  Bienvenue sur le module Gestion d'espaces
 
-JSPP.maintenanceTout = La totalit\u00e9 de Silverpeas est en mode Maintenance !
-JSPP.maintenance = Mode Maintenance :
-JSPP.maintenanceStatus = Cet espace est actuellement
-JSPP.maintenanceTxtModeOn = en mode maintenance...
-JSPP.maintenanceModeOn = Actif
-JSPP.maintenanceModeOff = D\u00e9sactiv\u00e9
+JSPP.maintenanceTout = La totalit\u00e9 de la plate-forme est en maintenance !
+JSPP.maintenanceStatus.0 = L'espace n'est pas en maintenance
+JSPP.maintenanceStatus.1 = L'espace est en maintenance car la totalit\u00e9 de la plate-forme est en maintenance
+JSPP.maintenanceStatus.2 = L'espace est en maintenance car un de ses parents est en maintenance
+JSPP.maintenanceStatus.3 = L'espace est en maintenance
 JSPP.maintenanceModeToOn = Activer le mode maintenance
 JSPP.maintenanceModeToOff = D\u00e9sactiver le mode maintenance
 
@@ -62,15 +61,19 @@ JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du r\u00f4le
 JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du r\u00f4le
 
 JSPP.ComponentPanelCreateTitle = Ajouter une application
-JSPP.ComponentPanelModifyTitle = Modifier l'application
-JSPP.ComponentPanelDeleteTitle = Supprimer l'application
-JSPP.CopyComponent = Copier l'application
-JSPP.PasteComponent = Coller
+JSPP.ComponentPanelModifyTitle = Modifier cette application
+JSPP.ComponentPanelDeleteTitle = Supprimer cette application
+JSPP.component.copy = Copier cette application
+JSPP.component.cut = Couper cette application
+JSPP.component.paste = Coller cette application
 
 JSPP.SubSpacePanelCreateTitle = Cr\u00e9er un sous espace
 JSPP.SpacePanelCreateTitle = Cr\u00e9er un espace
-JSPP.SpacePanelModifyTitle = Modifier l'espace
-JSPP.SpacePanelDeleteTitle = Supprimer l'espace
+JSPP.SpacePanelModifyTitle = Modifier cet espace
+JSPP.SpacePanelDeleteTitle = Supprimer cet espace
+JSPP.space.copy = Copier cet espace
+JSPP.space.cut = Couper cet espace
+JSPP.space.paste = Coller l'espace
 
 JSPP.Choose = S\u00e9lectionnez...
 JSPP.ModifyStartPage = Modifier la page d'accueil
@@ -107,10 +110,10 @@ JSPP.reader = Lecteurs
 JSPP.Manager.help = Le r\u00f4le "Manager d'espace" permet uniquement de d\u00e9l\u00e9guer l'administration de cet espace \u00e0 n'importe quel utilisateur.<br/>Par d\u00e9faut, un "manager d'espace" n'a aucun droit sur les applications de l'espace.<br/>Attention donc de ne pas confondre ce r\u00f4le avec celui de "Gestionnaire" qui s'applique bien aux applications de l'espace.
 
 #  Gestion de l'ordre
-JSPP.SpaceOrder = D\u00e9placer l'espace
+JSPP.SpaceOrder = Modifier le rang
 JSPP.SpacePlace = D\u00e9placement avant l'espace
 JSPP.PlaceLast = D\u00e9placer en fin
-JSPP.ComponentOrder = D\u00e9placer l'application
+JSPP.ComponentOrder = Modifier le rang
 JSPP.ComponentPlace = D\u00e9placement avant l'application
 
 #  position espace, application
