--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target
 .classpath
 .project
 .sonar-ide.properties
+nbactions.xml
 nb-configuration.xml
 /web-core/src/main/java/META-INF
 /war-core/src/main/webapp/META-INF
