Bug #3404 : fixing dependencies and using Tika for Excel files

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/Parser.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/Parser.properties
@@ -28,8 +28,8 @@ text/html = com.stratelia.webactiv.util.indexEngine.parser.htmlParser.HTMLParser
 application/pdf = com.stratelia.webactiv.util.indexEngine.parser.pdfParser.PdfParser2
 application/msword = com.stratelia.webactiv.util.indexEngine.parser.wordParser.WordParser
 
-application/x-msexcel = com.stratelia.webactiv.util.indexEngine.parser.excelParser.ExcelParser
-application/vnd.ms-excel = com.stratelia.webactiv.util.indexEngine.parser.excelParser.ExcelParser
+application/x-msexcel = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/vnd.ms-excel = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
 application/powerpoint = com.stratelia.webactiv.util.indexEngine.parser.pptParser.PptParserPOI
 application/x-mspowerpoint = com.stratelia.webactiv.util.indexEngine.parser.pptParser.PptParserPOI
