--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>5.9.3</version>
+    <version>5.9.4-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas.core</groupId>
