Using tika to parse all files for indexation

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/Parser.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/Parser.properties
@@ -23,24 +23,24 @@
 #
 # for each file format, the corresponding parser
 
-text/plain = com.stratelia.webactiv.util.indexEngine.parser.textParser.TextParser
-text/html = com.stratelia.webactiv.util.indexEngine.parser.htmlParser.HTMLParser2
-application/pdf = com.stratelia.webactiv.util.indexEngine.parser.pdfParser.PdfParser2
-application/msword = com.stratelia.webactiv.util.indexEngine.parser.wordParser.WordParser
+text/plain = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+text/html = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/pdf = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/msword = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
-application/x-msexcel = com.stratelia.webactiv.util.indexEngine.parser.excelParser.ExcelParser
-application/vnd.ms-excel = com.stratelia.webactiv.util.indexEngine.parser.excelParser.ExcelParser
+application/x-msexcel = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/vnd.ms-excel = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
-application/powerpoint = com.stratelia.webactiv.util.indexEngine.parser.pptParser.PptParserPOI
-application/x-mspowerpoint = com.stratelia.webactiv.util.indexEngine.parser.pptParser.PptParserPOI
-application/vnd.ms-powerpoint = com.stratelia.webactiv.util.indexEngine.parser.pptParser.PptParserPOI
+application/powerpoint = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/x-mspowerpoint = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/vnd.ms-powerpoint = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
-text/richtext = com.stratelia.webactiv.util.indexEngine.parser.rtfParser.RtfParser
-application/rtf = com.stratelia.webactiv.util.indexEngine.parser.rtfParser.RtfParser
+text/richtext = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/rtf = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
-application/postscript = com.stratelia.webactiv.util.indexEngine.parser.psParser.PsParser
+application/postscript = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
-application/vnd.oasis.opendocument.presentation = com.stratelia.webactiv.util.indexEngine.parser.ooParser.OOParser
-application/vnd.oasis.opendocument.text = com.stratelia.webactiv.util.indexEngine.parser.ooParser.OOParser
-application/vnd.oasis.opendocument.spreadsheet = com.stratelia.webactiv.util.indexEngine.parser.ooParser.OOParser
+application/vnd.oasis.opendocument.presentation = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/vnd.oasis.opendocument.text = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
+application/vnd.oasis.opendocument.spreadsheet = com.stratelia.webactiv.util.indexEngine.parser.tika.TikaParser
 
