by default, snowball is not used

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
@@ -78,6 +78,7 @@ server.name = Silverpeas
 
 analyzer.language.default = fr
 
+snowball.active = false
 snowball.stemmer.fr = French
 snowball.stemmer.de = German
 snowball.stemmer.en = English
