--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -30,8 +30,16 @@
       <artifactId>jsp-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.ejb</groupId>
       <artifactId>ejb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
