--- a/lib-core/src/test/resources/maven.properties
+++ b/lib-core/src/test/resources/maven.properties
@@ -24,4 +24,4 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-build.dir=${project.build.directory}/temp
+build.dir=${basedir}/target/temp
