Feature #3458 - adding "users in domain" quota services to the Silverpeas back office in SaaS mode

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
@@ -118,7 +118,7 @@ JDP.importSelected = Importer les utilisateurs s\u00e9lectionn\u00e9s
 JDP.sendEmail = Envoyer les param\u00E8tres de connexion par email :
 JDP.createAccountNotifTitle = Silverpeas - Identifiant de votre compte
 
-JDP.userDomainQuotaMaxCount = Nombre d'utilisateurs maximum (0 pour un nombre illimit\u00e9)
+JDP.userDomainQuotaMaxCount = Nombre maximum d'utilisateurs (0 pour un nombre illimit\u00e9)
 JDP.userDomainQuotaMaxCountError = Le nombre maximum d'utilisateurs renseign\u00e9 pour le domaine est incorrect.
-JDP.userDomainQuotaCurrentCount = {0} utilisateur(s) enregistr\u00e9(s)
-JDP.userDomainQuotaFull = Le nombre d'utilisateurs maximum est atteint
+JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#utilisateur enregistr\u00e9| 1<utilisateurs enregistr\u00e9s}
+JDP.userDomainQuotaFull = Le nombre maximum d'utilisateurs est atteint
