--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -79,19 +79,22 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
       <filter-class>com.sun.portal.portletcontainer.appengine.PortletAppEngineFilter</filter-class>
     </filter>
 	<filter-mapping>
-    <filter-name>CharacterEncodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <!-- PAE Filter Mapping -->
-    <filter-name>PortletAppEngineFilter</filter-name>
-    <servlet-name>PortletAppEngineServlet</servlet-name>
-    <dispatcher>INCLUDE</dispatcher>
-  </filter-mapping>
-  
-  <listener>
-    <listener-class>com.silverpeas.bootstrap.SilverpeasContextBootStrapper</listener-class>
-  </listener>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <!-- PAE Filter Mapping -->
+        <filter-name>PortletAppEngineFilter</filter-name>
+        <servlet-name>PortletAppEngineServlet</servlet-name>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+    <listener>
+        <listener-class>com.silverpeas.bootstrap.SilverpeasContextBootStrapper</listener-class>
+    </listener>
+    <!--
+<listener>
+<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>-->
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
