--- a/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/forgottenPasswordMail.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/authentication/multilang/forgottenPasswordMail.properties
@@ -38,3 +38,4 @@ screen.reinitRequested = Un message \u00E9lectronique a \u00E9t\u00E9 envoy\u00E
 screen.reinitNotAllowed = La r\u00E9initialisation de votre mot de passe n'est pas autoris\u00E9.<br/>Veuillez contacter votre administrateur...
 screen.reinitDone = Un message \u00E9lectronique a \u00E9t\u00E9 envoy\u00E9 \u00E0 l'adresse \u00E9lectronique associ\u00E9e \u00E0 votre compte. Ce message contient votre nouveau mot de passe.<br/><br/>Un certain temps peut \u00EAtre n\u00E9cessaire avant la r\u00E9ception des messages. N'oubliez pas de v\u00E9rifier que le message n'est pas pass\u00E9 dans votre dossier de messages ind\u00E9sirables.
 screen.reinitError = La r\u00E9initialisation de votre mot de passe a \u00E9chou\u00E9.<br/>Veuillez contacter votre administrateur...
+screen.generalError = La r\u00E9initialisation de votre mot de passe est impossible.<br/>Veuillez contacter votre administrateur...
