--- a/config-core/src/main/config/properties/org/silverpeas/silverpeas/lookAndFeel/generalLook.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/silverpeas/lookAndFeel/generalLook.properties
@@ -67,5 +67,5 @@ forgottenPasswordChangeNotAllowed = /defaultReInitPassword.jsp?Action=ChangeNotA
 forgottenPasswordReset = /defaultReInitPassword.jsp?Action=NewPasswordSended
 forgottenPasswordResetError = /defaultReInitPassword.jsp?Action=NewPasswordError
 forgottenPasswordSendMessage = 
-forgottenPasswordError = 
+forgottenPasswordError = /defaultReInitPassword.jsp?Action=GeneralError
 forgottenPasswordLoginUrl = /Login.jsp
